Fix z-index for toggle tab.

--- a/content/src/editor.less
+++ b/content/src/editor.less
@@ -1164,6 +1164,7 @@ body#pencildoc #diigolet-csm {
 
 .texttoggle {
   right: -32px;
+  z-index: -1;
 }
 
 .texttoggle .slide:after {
